css/emoji-button.css
.emoji-picker {
  border: 1px solid #CCCCCC;
  border-radius: 5px;
  background: #FFFFFF;
  width: 23rem;
  font-family: Arial, Helvetica, sans-serif;
  opacity: 0;
  transition: opacity 0.3s;
  margin: 0 0.5em;
  overflow: hidden;
}

.emoji-picker.visible {
  opacity: 1;
}

.emoji-picker__content {
  padding: 0.5em;
  height: 20rem;
  overflow: hidden;
  position: relative;
}

.emoji-picker__preview {
  height: 2em;
  padding: 0.5em;
  border-top: 1px solid #CCCCCC;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.emoji-picker__preview-emoji {
  font-size: 2em;
  margin-right: 0.25em;
  font-family: "Segoe UI Emoji", "Segoe UI Symbol", "Segoe UI", "Apple Color Emoji", "Twemoji Mozilla", "Noto Color Emoji", "EmojiOne Color", "Android Emoji";
}

.emoji-picker__preview-name {
  color: #666666;
  font-size: 0.85em;
  overflow-wrap: break-word;
  word-break: break-all;
}

.emoji-picker__tabs {
  margin: 0;
  padding: 0;
  display: flex;
}

.emoji-picker__tab {
  font-size: 1.5rem;
  list-style: none;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  flex-grow: 1;
  text-align: center;
  color: #666666;
  border-radius: 3px;
  transition: background 0.25s;
}

.emoji-picker__tab:hover {
  background: #E8F4F9;
}

.emoji-picker__tab svg {
  padding: 0.5rem;
}

.emoji-picker__tab.active {
  background: #4F81E5;
  color: #FFFFFF;
}

.emoji-picker__tab-body {
  margin-top: 0.5em;
  transform: translateX(25rem);
  transition: transform 0.25s;
  position: absolute;
}

.emoji-picker__tab-body h2 {
  font-size: 0.85rem;
  color: #333333;
  margin: 0;
  text-align: left;
}

.emoji-picker__tab-body.active {
  display: block;
  transform: translateX(0);
}

.emoji-picker__emojis {
  height: 16.5rem;
  overflow-y: scroll;
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
  justify-content: center;
  width: calc((1.8rem * 1.5 * 8) + 0.5rem);
  margin: auto;
}

.emoji-picker__emojis.search-results {
  height: 21rem;
}

.emoji-picker__emoji {
  background: transparent;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 1.8rem;
  width: 1.5em;
  height: 1.5em;
  padding: 0;
  margin: 0;
  outline: none;
  font-family: "Segoe UI Emoji", "Segoe UI Symbol", "Segoe UI", "Apple Color Emoji", "Twemoji Mozilla", "Noto Color Emoji", "EmojiOne Color", "Android Emoji";
}

.emoji-picker__emoji:focus, .emoji-picker__emoji:hover {
  background: #E8F4F9;
}

.emoji-picker__search-container {
  margin: 0.5em;
  position: relative;
  height: 2em;
  display: flex;
}

.emoji-picker__search {
  box-sizing: border-box;
  width: 100%;
  border-radius: 3px;
  border: 1px solid #CCCCCC;
  padding-right: 2em;
  padding: 0.5em 2.25em 0.5em 0.5em;
  font-size: 0.85rem;
  outline: none;
}

.emoji-picker__search:focus {
  border: 1px solid #4F81E5;
}

.emoji-picker__search-icon {
  position: absolute;
  color: #CCCCCC;
  width: 1em;
  height: 1em;
  right: 0.75em;
  top: calc(50% - 0.5em);
}

.emoji-picker__search-not-found {
  color: #666666;
  text-align: center;
  margin-top: 2em;
}

.emoji-picker__search-not-found-icon {
  font-size: 3em;
}

.emoji-picker__search-not-found h2 {
  margin: 0.5em 0;
  font-size: 1em;
}

.emoji-picker__variant-overlay {
  background: rgba(0, 0, 0, 0.7);
  position: absolute;
  top: 0;
  left: 0;
  width: 23rem;
  height: 27.5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.emoji-picker__variant-popup {
  background: #FFFFFF;
  margin: 0.5em;
  padding: 0.5em;
  text-align: center;
}

.emoji-picker__variant-popup-close-button {
  cursor: pointer;
  background: transparent;
  border: none;
  position: absolute;
  right: 1em;
  padding: 0;
  top: calc(50% - 0.5em);
  height: 1em;
  width: 1em;
}

